Turnitin V2 ucla_mod release 08-30-2016 base off master 838260d Changes combine all the ucla_mod changes (exclude pull changes) - Changing default for missing first and last name to be N/A - CCLE-5544 Improve turnitintwo resubmit button   * remove upload cloud icon   * modify download icon   * change "submit paper" link to "submit" button   * change "submit paper" to "Resubmit" where student attempt to     resubmit   * uniform the sizes of "Submit" button and "Resubmit" button   * align vertically middle with submit or resubmit button and     the existing smaller icons - CCLE-4440 Fix issue of including managers as tutor   * fix to not include inherited roles from tutor   * modify the add tutors list to show only course graders   * disable adding tutor to the list automatically - CCLE-5141 Submission inbox list inactive student   * fix the issue of submission inbox list inactive student   * fix the "Enrol All Students" link to exclude inactive students - CCLE-5895 Hide turnitintwo students tab - Rename TurnitinV2 grading text   * create en_us lang string package to include all new grading text

--- a/sass/partials/_table.scss
+++ b/sass/partials/_table.scss
@@ -51,7 +51,10 @@
     td {
         padding: $table-padding 10px !important;
         font-size: 13px;
-        vertical-align: top;
+	/* START UCLA-MOD: CCLE-5544 Improve Turnitintwo submit button */
+        /* vertical-align: top; */
+	vertical-align: middle;
+	/* END UCLA-MOD: CCLE-5544 Improve Turnitintwo submit button */
     }
 
     .sorting_disabled {
